services/auth/src/main/fabric8/hono-auth-dc.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: hono
        name: ${project.artifactId}
    spec:
      containers:
      - image: eclipsehono/${project.artifactId}:${project.version}
        name: ${project.artifactId}
        ports:
        - containerPort: 5671
          name: amqps
          protocol: TCP
        - containerPort: 5672
          name: amqp
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 5672
