services/auth/src/main/fabric8/hono-auth-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  ports:
  - name: amqps
    port: 25671
    protocol: TCP
    targetPort: 5671
  - name: amqp
    port: 25672
    protocol: TCP
    targetPort: 5672
  selector:
    name: ${project.artifactId}
