services/auth/src/main/fabric8/hono-auth-route.yml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: hono
    name: ${project.artifactId}
  name: ${project.artifactId}
spec:
  to:
    kind: Service
    name: ${project.artifactId}
  port:
    targetPort: 5671
  tls:
    termination: passthrough
